// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 1`] = `
[
  "  AA   | AC Banner           ",
  " A  A  | 1.0.0               ",
  " AAAA  |                     ",
  " A  A  | Alan Cândido        ",
  " A  A  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 2`] = `
[
  " BBBB   | AC Banner           ",
  " B   B  | 1.0.0               ",
  " BBBB   |                     ",
  " B   B  | Alan Cândido        ",
  " BBBB   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 3`] = `
[
  "  CCC  | AC Banner           ",
  " C     | 1.0.0               ",
  " C     |                     ",
  " C     | Alan Cândido        ",
  "  CCC  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 4`] = `
[
  " DDD   | AC Banner           ",
  " D  D  | 1.0.0               ",
  " D  D  |                     ",
  " D  D  | Alan Cândido        ",
  " DDD   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 5`] = `
[
  " EEEE  | AC Banner           ",
  " E     | 1.0.0               ",
  " EEE   |                     ",
  " E     | Alan Cândido        ",
  " EEEE  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 6`] = `
[
  " FFFF  | AC Banner           ",
  " F     | 1.0.0               ",
  " FFF   |                     ",
  " F     | Alan Cândido        ",
  " F     | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 7`] = `
[
  "  GGG   | AC Banner           ",
  " G      | 1.0.0               ",
  " G  GG  |                     ",
  " G   G  | Alan Cândido        ",
  "  GGG   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 8`] = `
[
  " H  H  | AC Banner           ",
  " H  H  | 1.0.0               ",
  " HHHH  |                     ",
  " H  H  | Alan Cândido        ",
  " H  H  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 9`] = `
[
  " III  | AC Banner           ",
  "  I   | 1.0.0               ",
  "  I   |                     ",
  "  I   | Alan Cândido        ",
  " III  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 10`] = `
[
  "     J  | AC Banner           ",
  "     J  | 1.0.0               ",
  "     J  |                     ",
  " J   J  | Alan Cândido        ",
  "  JJJ   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 11`] = `
[
  " K  K  | AC Banner           ",
  " K K   | 1.0.0               ",
  " KK    |                     ",
  " K K   | Alan Cândido        ",
  " K  K  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 12`] = `
[
  " L     | AC Banner           ",
  " L     | 1.0.0               ",
  " L     |                     ",
  " L     | Alan Cândido        ",
  " LLLL  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 13`] = `
[
  " M   M  | AC Banner           ",
  " MM MM  | 1.0.0               ",
  " M M M  |                     ",
  " M   M  | Alan Cândido        ",
  " M   M  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 14`] = `
[
  " N   N  | AC Banner           ",
  " NN  N  | 1.0.0               ",
  " N N N  |                     ",
  " N  NN  | Alan Cândido        ",
  " N   N  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 15`] = `
[
  "  OOO   | AC Banner           ",
  " O   O  | 1.0.0               ",
  " O   O  |                     ",
  " O   O  | Alan Cândido        ",
  "  OOO   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 16`] = `
[
  " PPPP   | AC Banner           ",
  " P   P  | 1.0.0               ",
  " PPPP   |                     ",
  " P      | Alan Cândido        ",
  " P      | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 17`] = `
[
  "  QQQ   | AC Banner           ",
  " Q   Q  | 1.0.0               ",
  " Q   Q  |                     ",
  " QQ  Q  | Alan Cândido        ",
  "  QQQQ  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 18`] = `
[
  " RRRR   | AC Banner           ",
  " R   R  | 1.0.0               ",
  " RRRR   |                     ",
  " R R    | Alan Cândido        ",
  " R  RR  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 19`] = `
[
  "  SSS   | AC Banner           ",
  " S      | 1.0.0               ",
  "  SSS   |                     ",
  "     S  | Alan Cândido        ",
  " SSSS   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 20`] = `
[
  " TTTTTT  | AC Banner           ",
  "   TT    | 1.0.0               ",
  "   TT    |                     ",
  "   TT    | Alan Cândido        ",
  "   TT    | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 21`] = `
[
  " U   U  | AC Banner           ",
  " U   U  | 1.0.0               ",
  " U   U  |                     ",
  " U   U  | Alan Cândido        ",
  "  UUU   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 22`] = `
[
  " V     V  | AC Banner           ",
  " V     V  | 1.0.0               ",
  "  V   V   |                     ",
  "   V V    | Alan Cândido        ",
  "    V     | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 23`] = `
[
  " W     W  | AC Banner           ",
  " W     W  | 1.0.0               ",
  " W  W  W  |                     ",
  "  W W W   | Alan Cândido        ",
  "   W W    | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 24`] = `
[
  "X   X  | AC Banner           ",
  " X X   | 1.0.0               ",
  "  X    |                     ",
  " X X   | Alan Cândido        ",
  "X   X  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 25`] = `
[
  " Y   Y   | AC Banner           ",
  "  Y Y    | 1.0.0               ",
  "   Y     |                     ",
  "   Y     | Alan Cândido        ",
  "   Y     | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 26`] = `
[
  " ZZZZZ  | AC Banner           ",
  "    Z   | 1.0.0               ",
  "   Z    |                     ",
  "  Z     | Alan Cândido        ",
  " ZZZZZ  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 27`] = `
[
  "  █████▒   | AC Banner           ",
  " ██▒▒▒██▒  | 1.0.0               ",
  " ███████▒  |                     ",
  " ██▒▒▒██▒  |                     ",
  " ██▒  ██▒  | Alan Cândido        ",
  " ▒▒▒  ▒▒▒  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 28`] = `
[
  " ██████▒   | AC Banner           ",
  " ██▒▒▒██▒  | 1.0.0               ",
  " ██████▒▒  |                     ",
  " ██▒▒▒██▒  |                     ",
  " ██████▒▒  | Alan Cândido        ",
  " ▒▒▒▒▒▒▒   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 29`] = `
[
  "  ██████▒  | AC Banner           ",
  " ██▒▒▒▒▒▒  | 1.0.0               ",
  " ██▒       |                     ",
  " ██▒       |                     ",
  " ▒██████▒  | Alan Cândido        ",
  "  ▒▒▒▒▒▒▒  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 30`] = `
[
  " ██████▒   | AC Banner           ",
  " ██▒▒▒██▒  | 1.0.0               ",
  " ██▒  ██▒  |                     ",
  " ██▒  ██▒  |                     ",
  " ██████▒▒  | Alan Cândido        ",
  " ▒▒▒▒▒▒▒   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 31`] = `
[
  " ███████▒  | AC Banner           ",
  " ██▒▒▒▒▒▒  | 1.0.0               ",
  " █████▒    |                     ",
  " ██▒▒▒▒    |                     ",
  " ███████▒  | Alan Cândido        ",
  " ▒▒▒▒▒▒▒▒  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 32`] = `
[
  " ███████▒  | AC Banner           ",
  " ██▒▒▒▒▒▒  | 1.0.0               ",
  " █████▒    |                     ",
  " ██▒▒▒▒    |                     ",
  " ██▒       | Alan Cândido        ",
  " ▒▒▒       | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 33`] = `
[
  "  ██████▒   | AC Banner           ",
  " ██▒▒▒▒▒▒   | 1.0.0               ",
  " ██▒  ███▒  |                     ",
  " ██▒   ██▒  |                     ",
  " ▒██████▒▒  | Alan Cândido        ",
  "  ▒▒▒▒▒▒▒   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 34`] = `
[
  " ██▒  ██▒  | AC Banner           ",
  " ██▒  ██▒  | 1.0.0               ",
  " ███████▒  |                     ",
  " ██▒▒▒██▒  |                     ",
  " ██▒  ██▒  | Alan Cândido        ",
  " ▒▒▒  ▒▒▒  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 35`] = `
[
  " ██▒  | AC Banner           ",
  " ██▒  | 1.0.0               ",
  " ██▒  |                     ",
  " ██▒  |                     ",
  " ██▒  | Alan Cândido        ",
  " ▒▒▒  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 36`] = `
[
  "      ██▒  | AC Banner           ",
  "      ██▒  | 1.0.0               ",
  "      ██▒  |                     ",
  " ██   ██▒  |                     ",
  " ▒█████▒▒  | Alan Cândido        ",
  "  ▒▒▒▒▒▒   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 37`] = `
[
  " ██▒  ██▒  | AC Banner           ",
  " ██▒ ██▒▒  | 1.0.0               ",
  " █████▒▒   |                     ",
  " ██▒▒██▒   |                     ",
  " ██▒  ██▒  | Alan Cândido        ",
  " ▒▒▒  ▒▒▒  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 38`] = `
[
  " ██▒       | AC Banner           ",
  " ██▒       | 1.0.0               ",
  " ██▒       |                     ",
  " ██▒       |                     ",
  " ███████▒  | Alan Cândido        ",
  " ▒▒▒▒▒▒▒▒  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 39`] = `
[
  " ███▒   ███▒  | AC Banner           ",
  " ████▒ ████▒  | 1.0.0               ",
  " ██▒████▒██▒  |                     ",
  " ██▒▒██▒▒██▒  |                     ",
  " ██▒ ▒▒▒ ██▒  | Alan Cândido        ",
  " ▒▒▒     ▒▒▒  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 40`] = `
[
  " ███▒   ██▒  | AC Banner           ",
  " ████▒  ██▒  | 1.0.0               ",
  " ██▒██▒ ██▒  |                     ",
  " ██▒▒██▒██▒  |                     ",
  " ██▒ ▒████▒  | Alan Cândido        ",
  " ▒▒▒  ▒▒▒▒▒  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 41`] = `
[
  "  ██████▒   | AC Banner           ",
  " ██▒▒▒▒██▒  | 1.0.0               ",
  " ██▒   ██▒  |                     ",
  " ██▒   ██▒  |                     ",
  " ▒██████▒▒  | Alan Cândido        ",
  "  ▒▒▒▒▒▒▒   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 42`] = `
[
  " ██████▒   | AC Banner           ",
  " ██▒▒▒██▒  | 1.0.0               ",
  " ██████▒▒  |                     ",
  " ██▒▒▒▒▒   |                     ",
  " ██▒       | Alan Cândido        ",
  " ▒▒▒       | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 43`] = `
[
  "  ██████▒   | AC Banner           ",
  " ██▒▒▒▒██▒  | 1.0.0               ",
  " ██▒   ██▒  |                     ",
  " ██▒▄▄ ██▒  |                     ",
  " ▒██████▒▒  | Alan Cândido        ",
  "  ▒▒▒▀▀▒▒   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 44`] = `
[
  " ██████▒   | AC Banner           ",
  " ██▒▒▒██▒  | 1.0.0               ",
  " ██████▒▒  |                     ",
  " ██▒▒▒██▒  |                     ",
  " ██▒  ██▒  | Alan Cândido        ",
  " ▒▒▒  ▒▒▒  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 45`] = `
[
  " ███████▒  | AC Banner           ",
  " ██▒▒▒▒▒▒  | 1.0.0               ",
  " ███████▒  |                     ",
  " ▒▒▒▒▒██▒  |                     ",
  " ███████▒  | Alan Cândido        ",
  " ▒▒▒▒▒▒▒▒  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 46`] = `
[
  " ████████▒  | AC Banner           ",
  " ▒▒▒██▒▒▒▒  | 1.0.0               ",
  "    ██▒     |                     ",
  "    ██▒     |                     ",
  "    ██▒     | Alan Cândido        ",
  "    ▒▒▒     | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 47`] = `
[
  " ██▒   ██▒  | AC Banner           ",
  " ██▒   ██▒  | 1.0.0               ",
  " ██▒   ██▒  |                     ",
  " ██▒   ██▒  |                     ",
  " ▒██████▒▒  | Alan Cândido        ",
  "  ▒▒▒▒▒▒▒   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 48`] = `
[
  " ██▒   ██▒  | AC Banner           ",
  " ██▒   ██▒  | 1.0.0               ",
  " ██▒   ██▒  |                     ",
  " ▒██▒ ██▒▒  |                     ",
  "  ▒████▒▒   | Alan Cândido        ",
  "   ▒▒▒▒▒    | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 49`] = `
[
  " ██▒    ██▒  | AC Banner           ",
  " ██▒    ██▒  | 1.0.0               ",
  " ██▒ █▒ ██▒  |                     ",
  " ██▒███▒██▒  |                     ",
  " ▒███▒███▒▒  | Alan Cândido        ",
  "  ▒▒▒▒▒▒▒▒   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 50`] = `
[
  "  ██▒  ██▒   | AC Banner           ",
  "  ▒██▒██▒▒   | 1.0.0               ",
  "   ▒███▒▒    |                     ",
  "   ██▒██▒    |                     ",
  "  ██▒▒ ██▒   | Alan Cândido        ",
  "  ▒▒▒  ▒▒▒   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 51`] = `
[
  " ██▒   ██▒  | AC Banner           ",
  " ▒██▒ ██▒▒  | 1.0.0               ",
  "  ▒████▒▒   |                     ",
  "   ▒██▒▒    |                     ",
  "    ██▒     | Alan Cândido        ",
  "    ▒▒▒     | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 52`] = `
[
  " ███████▒  | AC Banner           ",
  " ▒▒▒███▒▒  | 1.0.0               ",
  "   ███▒▒   |                     ",
  "  ███▒▒    |                     ",
  " ███████▒  | Alan Cândido        ",
  " ▒▒▒▒▒▒▒▒  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 53`] = `
[
  " ///////  | AC Banner           ",
  " //   //  | 1.0.0               ",
  " ///////  |                     ",
  " //   //  | Alan Cândido        ",
  " //   //  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 54`] = `
[
  " //////   | AC Banner           ",
  " //   //  | 1.0.0               ",
  " //////   |                     ",
  " //   //  | Alan Cândido        ",
  " //////   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 55`] = `
[
  " //////  | AC Banner           ",
  " //      | 1.0.0               ",
  " //      |                     ",
  " //      | Alan Cândido        ",
  " //////  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 56`] = `
[
  " //////    | AC Banner           ",
  " //    //  | 1.0.0               ",
  " //    //  |                     ",
  " //    //  | Alan Cândido        ",
  " //////    | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 57`] = `
[
  " ///////  | AC Banner           ",
  " //       | 1.0.0               ",
  " /////    |                     ",
  " //       | Alan Cândido        ",
  " ///////  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 58`] = `
[
  " ///////  | AC Banner           ",
  " //       | 1.0.0               ",
  " /////    |                     ",
  " //       | Alan Cândido        ",
  " //       | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 59`] = `
[
  "  //////    | AC Banner           ",
  " //         | 1.0.0               ",
  " //    ///  |                     ",
  " //     //  | Alan Cândido        ",
  "  ///////   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 60`] = `
[
  " //   //  | AC Banner           ",
  " //   //  | 1.0.0               ",
  " ///////  |                     ",
  " //   //  | Alan Cândido        ",
  " //   //  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 61`] = `
[
  " //  | AC Banner           ",
  " //  | 1.0.0               ",
  " //  |                     ",
  " //  | Alan Cândido        ",
  " //  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 62`] = `
[
  "      //  | AC Banner           ",
  "      //  | 1.0.0               ",
  "      //  |                     ",
  " //   //  | Alan Cândido        ",
  "   /////  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 63`] = `
[
  " //    //  | AC Banner           ",
  " //   //   | 1.0.0               ",
  " /////     |                     ",
  " //   //   | Alan Cândido        ",
  " //    //  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 64`] = `
[
  " //       | AC Banner           ",
  " //       | 1.0.0               ",
  " //       |                     ",
  " //       | Alan Cândido        ",
  " ///////  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 65`] = `
[
  " ///     ///  | AC Banner           ",
  " ////   ////  | 1.0.0               ",
  " //  //// //  |                     ",
  " //    // //  | Alan Cândido        ",
  " //       //  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 66`] = `
[
  " ///    //  | AC Banner           ",
  " ////   //  | 1.0.0               ",
  " // //  //  |                     ",
  " //  // //  | Alan Cândido        ",
  " //   ////  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 67`] = `
[
  "  //////   | AC Banner           ",
  " //    //  | 1.0.0               ",
  " //    //  |                     ",
  " //    //  | Alan Cândido        ",
  "  //////   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 68`] = `
[
  " //////   | AC Banner           ",
  " //   //  | 1.0.0               ",
  " //////   |                     ",
  " //       | Alan Cândido        ",
  " //       | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 69`] = `
[
  "  //////    | AC Banner           ",
  " //     //  | 1.0.0               ",
  " //  /  //  |                     ",
  " // //  //  | Alan Cândido        ",
  "   //////   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 70`] = `
[
  " //////   | AC Banner           ",
  " //   //  | 1.0.0               ",
  " //////   |                     ",
  " //   //  | Alan Cândido        ",
  " //   //  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 71`] = `
[
  " //////  | AC Banner           ",
  " //      | 1.0.0               ",
  " //////  |                     ",
  "     //  | Alan Cândido        ",
  " //////  | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 72`] = `
[
  " //////  | AC Banner           ",
  "   //    | 1.0.0               ",
  "   //    |                     ",
  "   //    | Alan Cândido        ",
  "   //    | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 73`] = `
[
  " //    //  | AC Banner           ",
  " //    //  | 1.0.0               ",
  " //    //  |                     ",
  " //    //  | Alan Cândido        ",
  "  //////   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 74`] = `
[
  " //     //  | AC Banner           ",
  " //     //  | 1.0.0               ",
  " //     //  |                     ",
  "   //   //  | Alan Cândido        ",
  "    ////    | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 75`] = `
[
  " //       //  | AC Banner           ",
  " //       //  | 1.0.0               ",
  " //   /   //  |                     ",
  " //  ///  //  | Alan Cândido        ",
  "   ///  ///   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 76`] = `
[
  " //      //  | AC Banner           ",
  "   //  //    | 1.0.0               ",
  "    ///      |                     ",
  "  //  //     | Alan Cândido        ",
  " //     //   | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 77`] = `
[
  " //    //  | AC Banner           ",
  "  //   //  | 1.0.0               ",
  "   ////    |                     ",
  "    //     | Alan Cândido        ",
  "   //      | brodao@gmail.com    ",
]
`;

exports[`AC Banner: test build all supported characters in all fonts should build the banner with all letters 78`] = `
[
  " //////  | AC Banner           ",
  "    //   | 1.0.0               ",
  "   //    |                     ",
  "  //     | Alan Cândido        ",
  " //////  | brodao@gmail.com    ",
]
`;
